--- a/theDefault/pom.xml
+++ b/theDefault/pom.xml
@@ -6,8 +6,8 @@
     <groupId>lastlightmod</groupId>  <!--defaultmod   lastlightmod-->
     <artifactId>LastLightMod</artifactId> <!--Keep a note of this one: this is the ID used in the "auto add cards" method-->
     <name>LastLight Mod</name>
-    <version>0.0.1</version>
-    <description>A default base to start your own mod from.</description>
+    <version>0.0.4</version>
+    <description>LastLight's first attempt at modding.</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
